--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 		"source": "https://github.com/bcit-ci/CodeIgniter"
 	},
 	"require": {
-		"php": "7.4.26",
+		"php": ">=5.3.7",
 		"twilio/sdk": "^6.24"
 	},
 	"suggest": {
