--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 	},
 	"require": {
 		"php": "8.0.14",
-		"twilio/sdk": "^6.24"
+		"twilio/sdk": "^6.24",
+		"ext-mongodb": "1.12.0"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
