--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
 	"require": {
 		"php": "7.4.27",
 		"twilio/sdk": "^6.24",
-		"ext-mongodb": "*",
-		"mongodb/mongodb": "^1.11.0"
+		"ext-mongodb": "^1.12.0"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
