--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
 	"require": {
 		"php": "7.4.27",
 		"twilio/sdk": "^6.24",
-		"ext-mongodb": "^1.12.0"
+		"ext-mongodb": "^1.12.0",
+		"stripe/stripe-php": "^7.116",
+		"vlucas/phpdotenv": "^5.4"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
