--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,9 @@
 		"twilio/sdk": "^6.24",
 		"ext-mongodb": "^1.12.0",
 		"stripe/stripe-php": "^7.116",
-		"vlucas/phpdotenv": "^5.4"
-	},
+		"vlucas/phpdotenv": "^5.4",
+      "ext-json": "*"
+    },
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
 	},
